<resources>
    <string name="app_name">E_Commerce_Zoha_Usaman</string>
    <string name="textViewText">WellCome To Moon Light</string>
    <string name="checked_out">Checked Out</string>
    <string name="checked_in">Checked In</string>
    <string name="share">Share</string>
    <string name="my_favourite">My Favourite</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="my_order">My Order</string>
    <string name="my_account">My Account</string>
    <string name="categories">Categories</string>
    <string name="home">Home</string>
    <string name="OpenDrawer">Open navigation drawer</string>
    <string name="CloseDrawer">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>